# codequalityenv

./: LICENSE  README.md  baseline.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  app.py  environment.py  index.html
