[project]
name = "code-quality-env"
version = "0.1.0"
description = "RL environment for AI code review agents"
authors = [{name = "Neurobytes"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic",
    "openenv-core[core]>=0.2.1"
]

[project.scripts]
server = "server.app:main"
